# schoolr-api

./: .gitignore  pyproject.toml
schoolr_api/: __init__.py  db.py  log.py
schoolr_api/common/: constants.py
schoolr_api/resources/: __init__.py  health.py
tests/: conftest.py  test_factory.py
tests/test_resources/: test_health.py
